[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-index-tools-cloudsway"
version = "0.1.0"
description = "LlamaIndex tool for Cloudsway SmartSearch API"
dependencies = [
    "llama-index-core>=0.12.0",
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
where = ["llama_index"]
